# ASL-Dictionary

./: .travis.yml  README.md  build.bat  build.cmd  build.sh  install.cmd  install.sh  lighthouserc.js
backend/: Dockerfile  Procfile  docker-compose.yml  pyproject.toml  readme.md  requirements.txt
backend/asl_dictionary/: admin.py  apps.py  models.py  serializers.py  service.py  tasks.py  urls.py  views.py
backend/asl_dictionary/admin/: actions.py  admin.py  filters.py  forms.py
backend/asl_dictionary/management/commands/: _utils.py  compress_videos.py  generate_thumbnails.py  optimize_videos.py  postprocess_videos.py  rename_videos.py
backend/asl_dictionary/migrations/: 0001_initial.py  0002_auto_20200410_1909.py  0003_auto_20200410_2012.py  0004_auto_20200410_2100.py  0005_auto_20200412_1809.py  0006_auto_20200413_1334.py  0007_auto_20200413_1352.py  0008_signword_see_also.py  0009_auto_20200413_1616.py  0010_auto_20200416_1830.py  0011_auto_20200417_1837.py  0012_signvideo_thumbnail_file.py  0013_signvideo_optimized_video_file.py  0014_auto_20200423_2136.py  0015_signword_synonyms.py  0016_auto_20200424_1904.py  0017_signvideo_words.py  0018_auto_20200609_2146.py
backend/asl_dictionary/templates/: detail.html  index.html  search.html
backend/asl_webscraper/: apps.py  service.py  tests.py
backend/backend/: celery.py  settings.py  urls.py
backend/templates/admin/: login.html  login_base.html
backend/terraform/environments/base/: outputs.tf  versions.tf
backend/terraform/environments/dev/: backend.tf  (+3 more)
backend/video_processor/: apps.py  service.py
(+55 files in other folders)
