[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Kai Prince <34746763+KaiPrince@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.5"
djangorestframework = "^3.14.0"
ffmpeg-python = "^0.2.0"
gunicorn = "^20.1.0"
requests = "^2.28.2"
sentry-sdk = "^1.13.0"
beautifulsoup4 = "^4.11.1"
redis = "^4.4.2"
social-auth-app-django = "^5.0.0"
django-cors-headers = "^3.13.0"
django-jazzmin = "^2.6.0"
django-sortedm2m = "^3.1.1"
django-storages = {extras = ["google"], version = "^1.13.2"}
django-cleanup = "^6.0.0"
django-celery-results = "^2.4.0"
pillow = "^9.4.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
flake8 = "^6.0.0"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
